--- a/EFI/OC/config.plist
+++ b/EFI/OC/config.plist
@@ -22,6 +22,14 @@
 				<key>Path</key>
 				<string>SSDT-PLUG-DRTNIA.aml</string>
 			</dict>
+			<dict>
+				<key>Comment</key>
+				<string>SSDT-GPU-SPOOF.aml</string>
+				<key>Enabled</key>
+				<true/>
+				<key>Path</key>
+				<string>SSDT-GPU-SPOOF.aml</string>
+			</dict>
 		</array>
 		<key>Delete</key>
 		<array>
